--- a/WpfGitTest/MainWindow.xaml
+++ b/WpfGitTest/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Label x:Name="lblBericht" Content="Kennismaking met Git" HorizontalAlignment="Left" Margin="147,117,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
