--- a/WpfGitTest/MainWindow.xaml
+++ b/WpfGitTest/MainWindow.xaml
@@ -7,9 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Label x:Name="lblBericht" Content="Kennismaking met Git" HorizontalAlignment="Left" Margin="147,117,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblBericht" Content="Kennismaking met Git" HorizontalAlignment="Left" Margin="179,67,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbltest" Content="test" HorizontalAlignment="Left" Margin="25,19,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbltest2" Content="test2" HorizontalAlignment="Left" Margin="25,50,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnWelkom" Content="Welkom" HorizontalAlignment="Left" Margin="200,107,0,0" VerticalAlignment="Top" Width="75" Click="btnWelkom_Click"/>
+        <ListBox x:Name="lstWelkom" HorizontalAlignment="Left" Height="100" Margin="189,148,0,0" VerticalAlignment="Top" Width="100"/>
 
     </Grid>
 </Window>
